Add code to insert dataframe data into the database

--- a/data/data_eda.ipynb
+++ b/data/data_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,22 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def replace_name_with_id(column):\n",
-    "    values = extract_unique_values(column)\n",
-    "    \n",
-    "    lookup = pd.Series(pd.RangeIndex(0,len(values),1), index=values, name=column.name) # make a lookup table with tag name as key and integer id as value\n",
-    "    \n",
-    "    new_column =column.apply(lambda values: [lookup[val] for val in values]) # replace names with integer id\n",
-    "    return new_column, lookup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,12 +258,14 @@
     "                             'type': 'person',\n",
     "                             'role': 'factchecker'\n",
     "                         })\n",
-    "# some factcheckers are organizations\n",
-    "factcheckers.loc[factcheckers['name'] == 'FactCheck.org','type'] = 'organization' # manual adjustment\n",
+    "\n",
+    "# remove FactCheck.org row because is inserted after with organization group\n",
+    "mask = factcheckers.loc[factcheckers['name'] == 'FactCheck.org'].index\n",
+    "factcheckers.drop(mask)\n",
     "\n",
     "\n",
     "## Organizations agents\n",
-    "organizations = pd.DataFrame({'name': ['Pagella Politica', 'LaVoce.info','PolitiFact', \n",
+    "organizations = pd.DataFrame({'name': ['FactCheck.org','Pagella Politica', 'LaVoce.info','PolitiFact', \n",
     "                                       'WashingtonPost','International Fact Checking Network',\n",
     "                                       'Duke Reporter lab'],\n",
     "                              'type': 'organization',\n",
@@ -289,8 +276,8 @@
     "                              'type': 'software',\n",
     "                              'role': 'claimant'\n",
     "                              })\n",
-    "\n",
-    "agents = pd.concat([claimants, factcheckers, organizations, software_bots], ignore_index=True)\n",
+    "# organization MUST be inserted before factchecker due to self referential foreign key\n",
+    "agents = pd.concat([organizations, claimants, factcheckers, software_bots], ignore_index=True)\n",
     "\n",
     "## Generate random affiliations \n",
     "fc_organizations = agents[(agents['type'] == 'organization') & (agents['role'] == 'factchecker')]\n",
@@ -298,7 +285,8 @@
     "random_affiliations_indeces = np.random.choice(fc_organizations.index, size=len(fc_person))\n",
     "\n",
     "agents.loc[fc_person.index,'affiliation_id'] = random_affiliations_indeces\n",
-    "\n"
+    "\n",
+    "agent_table = agents"
    ]
   },
   {
@@ -310,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,11 +309,13 @@
     "\n",
     "\n",
     "claims.loc[:,'speaker'] = generate_fk(df['speaker'], claimants, 'name') #replace names with id\n",
-    "\n",
+    "claims['language'] = 'en'\n",
     "claims = claims.rename({'claim': 'content', #align to SQL schema\n",
     "                        'speaker': 'claimant_id',\n",
     "                        'claimDate': 'publication_date',\n",
-    "                        'claimURL': 'url'}, axis='columns') # WARNING! claimURL is the review article URL, since no data is provided on the claim source url, we used this one"
+    "                        'claimURL': 'url'}, axis='columns') # WARNING! claimURL is the review article URL, since no data is provided on the claim source url, we used this one\n",
+    "\n",
+    "claim_table = claims"
    ]
   },
   {
@@ -337,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,19 +429,19 @@
     "\n",
     "\n",
     "\n",
-    "\n"
+    "review_table = reviews\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,250 +470,111 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>justification</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Malicious Transformation</td>\n",
-       "      <td>\"Whether these programs are \"\"high-quality\"\" i...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Missing Context</td>\n",
-       "      <td>\"At the preliminary budget meeting in June 200...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Missing Context</td>\n",
-       "      <td>\"Fresh Start PA said that under Corbett, \"\"Pen...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Malicious Transformation</td>\n",
-       "      <td>PolitiFact agrees it is still early in the 130...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Malicious Transformation</td>\n",
-       "      <td>There are many ways to calculate the amount th...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>Deceptive Editing</td>\n",
-       "      <td>\"Obama was correct when he said that \"\"right n...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>133</th>\n",
-       "      <td>Deceptive Editing</td>\n",
-       "      <td>Such audits are due at the end of the year, ne...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>134</th>\n",
-       "      <td>Deceptive Editing</td>\n",
-       "      <td>One issue that may contribute to the confusion...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>135</th>\n",
-       "      <td>Deceptive Editing</td>\n",
-       "      <td>Its not all sunshine and rainbows, but it hasn...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>Deceptive Editing</td>\n",
-       "      <td>Cheney said that the Army has only four combat...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>137 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        label  \\\n",
-       "0    Malicious Transformation   \n",
-       "1             Missing Context   \n",
-       "2             Missing Context   \n",
-       "3    Malicious Transformation   \n",
-       "4    Malicious Transformation   \n",
-       "..                        ...   \n",
-       "132         Deceptive Editing   \n",
-       "133         Deceptive Editing   \n",
-       "134         Deceptive Editing   \n",
-       "135         Deceptive Editing   \n",
-       "136         Deceptive Editing   \n",
-       "\n",
-       "                                         justification  \n",
-       "0    \"Whether these programs are \"\"high-quality\"\" i...  \n",
-       "1    \"At the preliminary budget meeting in June 200...  \n",
-       "2    \"Fresh Start PA said that under Corbett, \"\"Pen...  \n",
-       "3    PolitiFact agrees it is still early in the 130...  \n",
-       "4    There are many ways to calculate the amount th...  \n",
-       "..                                                 ...  \n",
-       "132  \"Obama was correct when he said that \"\"right n...  \n",
-       "133  Such audits are due at the end of the year, ne...  \n",
-       "134  One issue that may contribute to the confusion...  \n",
-       "135  Its not all sunshine and rainbows, but it hasn...  \n",
-       "136  Cheney said that the Army has only four combat...  \n",
-       "\n",
-       "[137 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "judgment_table"
+    "# Insert Into RDB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>review_id</th>\n",
-       "      <th>claim_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>132</td>\n",
-       "      <td>132</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>133</th>\n",
-       "      <td>133</td>\n",
-       "      <td>133</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>134</th>\n",
-       "      <td>134</td>\n",
-       "      <td>134</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>135</th>\n",
-       "      <td>135</td>\n",
-       "      <td>135</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>136</td>\n",
-       "      <td>136</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>137 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     review_id  claim_id\n",
-       "0            0         0\n",
-       "1            1         1\n",
-       "2            2         2\n",
-       "3            3         3\n",
-       "4            4         4\n",
-       "..         ...       ...\n",
-       "132        132       132\n",
-       "133        133       133\n",
-       "134        134       134\n",
-       "135        135       135\n",
-       "136        136       136\n",
-       "\n",
-       "[137 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "about_joint_table"
+    "from sqlalchemy import create_engine\n",
+    "from psycopg2.extensions import register_adapter, AsIs\n",
+    "\n",
+    "register_adapter(np.int64, AsIs)\n",
+    "\n",
+    "engine = create_engine(\"postgresql://{username}:{password}@{host}:{port}/{database}\".format(username='modsem',\n",
+    "                                                                                            password='modsem',\n",
+    "                                                                                            host='localhost',\n",
+    "                                                                                            port=5432,\n",
+    "                                                                                            database='faktnews'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag_table.to_sql('tag',con=engine, if_exists='append', index_label='id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_table.to_sql('rating',con=engine, if_exists='append', index_label='id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "judgment_table.to_sql('judgment',con=engine, if_exists='append', index_label='id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "review_table.to_sql('review',con=engine, if_exists='append', index_label='id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent_table.to_sql('agent',con=engine, if_exists='append', index_label='id',method=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "claim_table.to_sql('claim',con=engine, if_exists='append', index_label='id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "external_entity_table.to_sql('external_entity',con=engine, if_exists='append', index_label='id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topic_joint_table.to_sql('topic',con=engine, if_exists='append', index_label='id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mention_joint_table.to_sql('mention',con=engine, if_exists='append', index_label='id')\n",
+    "review_author_joint_table.to_sql('review_author',con=engine, if_exists='append', index_label='id')\n",
+    "about_joint_table.to_sql('about',con=engine, if_exists='append', index_label='id')"
    ]
   }
  ],
