--- a/data/data_eda.ipynb
+++ b/data/data_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,17 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_path = Path(\"train.tsv\")\n",
+    "dataset_path = Path(\"raw/MultiFC_train.tsv\")\n",
     "metadata_cols = [\"claimID\", \"claim\", \"label\", \"claimURL\",\n",
     "           \"reason\", \"categories\", \"speaker\", \"checker\", \n",
     "           \"tags\", \"articleTitle\", \"publishDate\", \"claimDate\", \"entities\"]\n",
     "\n",
     "mandatory_cols = [\"articleTitle\",\"checker\",\"speaker\",\"claim\",\"publishDate\",\"tags\",\"entities\"] # minimal columns subset that must not contain any null in any case\n",
-    "justification_taxonomy = [\"Missing Context\",\"Deceptive Editing\", \"Malicious Transformation\"]\n",
+    "justification_taxonomy = ['Confirmed Fact', \n",
+    "                          'Deceptive Editing', 'Omission', 'Splicing', \n",
+    "                          'Malicious Transformation', 'Doctoring', 'Fabrication', \n",
+    "                          'Missing Context', 'Isolation', 'Misrepresentation', \n",
+    "                          'Not Clear Geography Context', 'Not Clear Time Period Context', \n",
+    "                          'Not Clear Subject', 'Qualitative Claim']\n",
     "\n",
     "rating_mapping = { 'false': 'False',\n",
     "                   'none': 'False',\n",
@@ -136,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +240,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "def get_fake_profile_image_url(df):\n",
+    "    json_response = requests.get(url = \"https://fakeface.rest/face/json\", params={'minimum_age':25, 'maximum_age':65})\n",
+    "    response = json.loads(json_response.text)\n",
+    "    return response['image_url']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,12 +299,18 @@
     "# organization MUST be inserted before factchecker due to self referential foreign key\n",
     "agents = pd.concat([organizations, claimants, factcheckers, software_bots], ignore_index=True)\n",
     "\n",
+    "\n",
     "## Generate random affiliations \n",
     "fc_organizations = agents[(agents['type'] == 'organization') & (agents['role'] == 'factchecker')]\n",
     "fc_person = agents[(agents['type'] == 'person') & (agents['role'] == 'factchecker')]\n",
     "random_affiliations_indeces = np.random.choice(fc_organizations.index, size=len(fc_person))\n",
     "\n",
     "agents.loc[fc_person.index,'affiliation_id'] = random_affiliations_indeces\n",
+    "\n",
+    "# Generate random fake profile images\n",
+    "agents['image_url'] = np.nan\n",
+    "person_checker_mask = (agents['type'] == 'person') & (agents['role'] == 'factchecker') # filter only real human factcheckers\n",
+    "agents['image_url'] = agents.loc[person_checker_mask,'image_url'].apply(get_fake_profile_image_url) # add a fake profile image\n",
     "\n",
     "agent_table = agents"
    ]
@@ -298,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,11 +400,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "liarplus_path = Path(\"LIARPlus_validation.jsonl\")\n",
+    "liarplus_path = Path(\"raw/LIARPlus_validation.jsonl\")\n",
     "liar_df = pd.read_json(liarplus_path, lines=True)\n",
     "# random sample justification from liar plus dataset\n",
     "# WARNING! The sampling procedure is naive, this means that no sense records could be produced\n",
@@ -395,12 +421,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Review"
+    "\n",
+    "## Review\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from urllib.parse import urlparse\n",
+    "\n",
+    "def extract_title_from_url(url_string):\n",
+    "    return urlparse(url_string).path.strip(\"/\").split(\"/\")[-1].replace(\"-\",\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +451,7 @@
     "\n",
     "\n",
     "\n",
-    "reviews['title'] = 'XXXX'\n",
+    "reviews['title'] = reviews['url'].apply(extract_title_from_url)\n",
     "reviews['content'] = 'YYYY'\n",
     "reviews['language'] = 'en'\n",
     "reviews['rating_id'] = rating_table.index\n",
@@ -441,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
